# Indicium-Mail-TUI

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  LICENSE  MCP_DOCUMENTATION.md  README.md  manage.sh
.claude/skills/indicium-mail/: SKILL.md
crates/imt/: Cargo.toml
crates/imt-core/: Cargo.toml
crates/imt-core/src/: account.rs  address.rs  draft.rs  error.rs  event.rs  flag.rs  folder.rs  id.rs  lib.rs  message.rs  thread.rs
crates/imt-mcp/: Cargo.toml
crates/imt-mcp/src/: lib.rs  protocol.rs  server.rs  transport.rs
crates/imt-mcp/src/tools/: accounts.rs  compose.rs  flags.rs  folders.rs  messages.rs  mod.rs  move_.rs  search.rs
crates/imt-net/: Cargo.toml
crates/imt-net/src/: backend.rs  error.rs  imap.rs  lib.rs  oauth.rs  smtp.rs
crates/imt-store/: Cargo.toml
crates/imt-store/migrations/: 0001_init.sql  0002_fts.sql  0003_messages_index.sql  0004_has_attachments.sql  0005_folder_attachment_scan.sql  0006_keep_on_server.sql
crates/imt-store/src/: db.rs  lib.rs  secrets.rs
crates/imt-store/src/repo/: accounts.rs  drafts.rs  folders.rs  messages.rs  mod.rs  search.rs
crates/imt-sync/: Cargo.toml
crates/imt-sync/src/: account_task.rs  engine.rs  error.rs  lib.rs  password.rs  snippet.rs
crates/imt-tui/: Cargo.toml
crates/imt-tui/examples/: demo.rs
crates/imt-tui/src/: ai.rs  app.rs  attachments.rs  data.rs  keymap.rs  lib.rs  menu.rs  presets.rs  quote.rs  run.rs  settings.rs  theme.rs  thread.rs
crates/imt-tui/src/ui/: accounts.rs  attachment_viewer.rs  compose.rs  file_picker.rs  help.rs  info.rs  layout.rs  list.rs  menubar.rs  mod.rs  move_modal.rs  onboarding.rs  reader.rs  search.rs  settings.rs  sidebar.rs  status.rs  thread.rs  toast.rs
crates/imt/examples/: probe.rs
crates/imt/src/: cli.rs  config.rs  datasource.rs  main.rs  snapshot.rs
