[workspace]
resolver = "2"
members = [
    "crates/imt-core",
    "crates/imt-store",
    "crates/imt-net",
    "crates/imt-sync",
    "crates/imt-tui",
    "crates/imt",
]

[workspace.package]
version = "0.0.8"
edition = "2021"
license = "MIT"
authors = ["Indicium Mail TUI contributors"]
repository = "https://github.com/indicium/indicium-mail-tui"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time / ids
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.6"
tui-input = "0.10"

# Mail protocols
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
async-native-tls = "0.5"
mail-parser = "0.9"
mail-builder = "0.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder", "pool"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }

# HTML rendering
html2text = "0.13"

# Auth / secrets
keyring = "3"
oauth2 = "4"

# Utilities
directories = "5"
bytes = "1"
once_cell = "1"
regex = "1"
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
