[package]
name = "imt-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
imt-core = { path = "../imt-core" }
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
keyring.workspace = true
directories.workspace = true
